switched to schema based new child dialogue
