# jupyter_cassini_server/schema/models.py
@@ -1,6 +1,6 @@
 # generated by datamodel-codegen:
 #   filename:  openapi.yaml
-#   timestamp: 2024-08-30T12:01:18+00:00
+#   timestamp: 2024-08-30T12:05:41+00:00
 
 from __future__ import annotations
 
@@ -58,7 +58,6 @@ class ChildClsFolderInfo(CommonChildClsInfo):
 
 class ChildClsNotebookInfo(CommonChildClsInfo):
     templates: List[str]
-    metaNames: List[str]
     metaSchema: MetaSchema
     tierType: Literal['notebook']
 
