# jupyter_cassini_server/serialisation.py
@@ -117,8 +117,6 @@ def serialize_branch(tier: TierABC) -> TreeResponse:
         child_metas.discard("description")
         child_metas.discard("conclusion")
 
-        child_metaNames = list(child_metas)
-
         child_templates = [
             template.name for template in child_cls.get_templates(env.project)
         ]
@@ -129,12 +127,10 @@ def serialize_branch(tier: TierABC) -> TreeResponse:
             idRegex=child_cls.id_regex,
             namePartTemplate=child_cls.name_part_template,
             templates=child_templates,
-            metaNames=child_metaNames,
             metaSchema=MetaSchema.model_validate(child_cls.__meta_manager__.build_model().model_json_schema())
         )
     else:
         child_templates = []
-        child_metaNames = []
 
         child_cls_info = ChildClsFolderInfo(
             tierType='folder',
